--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                        data-delay="2500"
                        data-ease="easeOutExpo"
                        data-duration="2000"
-                       data-effect="scale(1.5,1.6)"> Learn More <i class="ion-ios-arrow-right"></i> </a> 
+                       data-effect="scale(1.5,1.6)"> Learn More!<i class="ion-ios-arrow-right"></i> </a> 
                     </div>
                 <!-- end of slide --> 
 
